STREET-430: Implement missing functions in the .NET API Changed: Panorama viewer / oblique viewer:     Add the functions: getButtonEnabled(buttonId) / toggleButtonEnabled(buttonId, enabled?) StreetSmartAPI:     AddOverlay function: Merge the 2 functions in 1 function     Add the function: Destroy API     Rename GetMeasurementInfo => GetActiveMeasurement     Add the function: GetDebugLogs     Rename OpenByQuery => Open

--- a/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
+++ b/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
@@ -86,6 +86,9 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Include="..\..\DemoAPI\Demo.WinForms\viewerButtonsBox.cs">
+      <Link>viewerButtonsBox.cs</Link>
+    </Compile>
     <EmbeddedResource Include="..\..\DemoAPI\Demo.WinForms\Demo.resx">
       <DependentUpon>Demo.cs</DependentUpon>
     </EmbeddedResource>
