--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
@@ -137,6 +137,7 @@
     <Compile Include="API\ViewerList.cs" />
     <Compile Include="Data\DomElement\DomElement.cs" />
     <Compile Include="Data\MeasurementOptions.cs" />
+    <Compile Include="Data\Overlay.cs" />
     <Compile Include="Data\PanoramaViewerOptions.cs" />
     <Compile Include="Data\ViewerOptions.cs" />
     <Compile Include="Data\ViewerTypes.cs" />
@@ -148,6 +149,7 @@
     <Compile Include="Factories\ViewerOptionsFactory.cs" />
     <Compile Include="Interfaces\IMeasurementOptions.cs" />
     <Compile Include="Interfaces\IObliqueViewer.cs" />
+    <Compile Include="Interfaces\IOverlay.cs" />
     <Compile Include="Interfaces\IPanoramaViewerOptions.cs" />
     <Compile Include="Interfaces\IViewer.cs" />
     <Compile Include="Interfaces\IViewerOptions.cs" />
