--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Factories\DomElementFactory.cs" />
     <Compile Include="Factories\MeasurementOptionsFactory.cs" />
+    <Compile Include="Factories\OverlayFactory.cs" />
     <Compile Include="Factories\PanoramaViewerOptionsFactory.cs" />
     <Compile Include="Factories\ViewerOptionsFactory.cs" />
     <Compile Include="Interfaces\IMeasurementOptions.cs" />
