STREET-812: - Changed the open viewer interface functions

--- a/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
+++ b/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
@@ -52,8 +52,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -101,9 +101,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\DemoAPI\Demo.WinForms\App.config" />
-    <None Include="..\..\DemoAPI\Demo.WinForms\packages.config">
-      <Link>packages.config</Link>
-    </None>
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\StreetSmart.WinForms\StreetSmart.WinForms.x64.csproj">
