STREET-897: Improved SLD passing in .NET API

--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
+    <Reference Include="System.XML" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="API\Events\StreetSmartApiEvent.cs" />
@@ -89,6 +90,23 @@
     <Compile Include="Data\BaseViewerOptions.cs" />
     <Compile Include="Data\Overlay.cs" />
     <Compile Include="Data\ObliqueViewerOptions.cs" />
+    <Compile Include="Data\SLD\FeatureTypeStyle.cs" />
+    <Compile Include="Data\SLD\FillType.cs" />
+    <Compile Include="Data\SLD\Graphic.cs" />
+    <Compile Include="Data\SLD\Mark.cs" />
+    <Compile Include="Data\SLD\PointSymbolizer.cs" />
+    <Compile Include="Data\SLD\PolygonSymbolizer.cs" />
+    <Compile Include="Data\SLD\Rule.cs" />
+    <Compile Include="Data\SLD\StrokeType.cs" />
+    <Compile Include="Data\SLD\StyledLayerDescriptor.cs" />
+    <Compile Include="Data\SLD\SvgParameter.cs" />
+    <Compile Include="Data\SLD\SvgParameterCollection.cs" />
+    <Compile Include="Data\SLD\Symbolizer.cs" />
+    <Compile Include="Data\SLD\SymbolizerType.cs" />
+    <Compile Include="Data\SLD\UserLayer.cs" />
+    <Compile Include="Data\SLD\UserStyle.cs" />
+    <Compile Include="Data\SLD\VendorOption.cs" />
+    <Compile Include="Data\SLD\VendorOptionType.cs" />
     <Compile Include="Data\ViewerTypes.cs" />
     <Compile Include="Data\ViewerOptions.cs" />
     <Compile Include="Data\DomElement\DomElement.cs" />
