added copy of shiftshader to the output directory

--- a/DemoAPI/Demo.WinForms/Demo.WinForms.x86.csproj
+++ b/DemoAPI/Demo.WinForms/Demo.WinForms.x86.csproj
@@ -176,7 +176,9 @@
   <PropertyGroup>
     <PostBuildEvent>xcopy /Y "$(ProjectDir)x86\*.*" *
 md locales
-xcopy /Y "$(ProjectDir)x64\locales\*.*" locales\*</PostBuildEvent>
+xcopy /Y "$(ProjectDir)x64\locales\*.*" locales\*
+md swiftshader
+xcopy /Y "$(ProjectDir)x64\swiftshader\*.*" swiftshader\*</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
