--- a/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
+++ b/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x64.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -24,7 +25,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -122,7 +122,8 @@ xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\*.pak" *
 xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\*.exe" *
 mkdir locales
 xcopy /Y  "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\locales\*.pak" "locales\*"
-</PostBuildEvent>
+mkdir swiftshader
+xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x64\swiftshader\*.*" swiftshader\*</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
