--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
@@ -169,12 +169,16 @@
     <Compile Include="Interfaces\API\IStreetSmartAPI.cs" />
     <Compile Include="Interfaces\Data\MeasurementGeometryType.cs" />
     <Compile Include="Interfaces\Data\ViewerType.cs" />
+    <Compile Include="Interfaces\GeoJson\IDerivedDataLineString.cs" />
+    <Compile Include="Interfaces\GeoJson\IDerivedDataPolygon.cs" />
+    <Compile Include="Interfaces\GeoJson\IPositionXY.cs" />
+    <Compile Include="Interfaces\GeoJson\IArea.cs" />
+    <Compile Include="Interfaces\GeoJson\IValue.cs" />
     <Compile Include="Interfaces\GeoJson\Unit.cs" />
     <Compile Include="Interfaces\GeoJson\IDerivedDataPoint.cs" />
     <Compile Include="Interfaces\GeoJson\IDerivedData.cs" />
     <Compile Include="Interfaces\GeoJson\IResultDirection.cs" />
-    <Compile Include="Interfaces\GeoJson\ISmartClickDetails.cs" />
-    <Compile Include="Interfaces\GeoJson\IStDev.cs" />
+    <Compile Include="Interfaces\GeoJson\IDetailsSmartClick.cs" />
     <Compile Include="Interfaces\GeoJson\IDirection.cs" />
     <Compile Include="Interfaces\GeoJson\IPosition.cs" />
     <Compile Include="Interfaces\GeoJson\IRecordingInfo.cs" />
