STREET-1038: convert GeoJSON to c# objects

--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
@@ -82,6 +82,34 @@
     <Compile Include="API\ObliqueViewer.cs" />
     <Compile Include="API\Viewer.cs" />
     <Compile Include="API\ViewerList.cs" />
+    <Compile Include="Data\GeoJson\DetailsForwardIntersection.cs" />
+    <Compile Include="Data\GeoJson\DetailsSmartClick.cs" />
+    <Compile Include="Data\GeoJson\Feature.cs" />
+    <Compile Include="Data\GeoJson\Geometry.cs" />
+    <Compile Include="Data\GeoJson\FeatureCollection.cs" />
+    <Compile Include="Data\GeoJson\ObservationLines.cs" />
+    <Compile Include="Data\GeoJson\MeasureDetails.cs" />
+    <Compile Include="Data\GeoJson\PositionXYZ.cs" />
+    <Compile Include="Data\GeoJson\Stdev.cs" />
+    <Compile Include="Data\GeoJson\PositionStdev.cs" />
+    <Compile Include="Data\GeoJson\Properties.cs" />
+    <Compile Include="Data\GeoJson\Polygon.cs" />
+    <Compile Include="Data\GeoJson\Point.cs" />
+    <Compile Include="Data\GeoJson\LineString.cs" />
+    <Compile Include="Data\GeoJson\ResultDirection.cs" />
+    <Compile Include="Data\GeoJson\RecordingInfo.cs" />
+    <Compile Include="Data\GeoJson\DerivedDataPolygon.cs" />
+    <Compile Include="Data\GeoJson\DerivedDataLineString.cs" />
+    <Compile Include="Data\GeoJson\DerivedData.cs" />
+    <Compile Include="Data\GeoJson\CRS.cs" />
+    <Compile Include="Data\GeoJson\DerivedDataPoint.cs" />
+    <Compile Include="Data\GeoJson\DetailsDepth.cs" />
+    <Compile Include="Data\GeoJson\Details.cs" />
+    <Compile Include="Data\GeoJson\Direction.cs" />
+    <Compile Include="Data\GeoJson\PositionXY.cs" />
+    <Compile Include="Data\GeoJson\Position.cs" />
+    <Compile Include="Data\GeoJson\Property.cs" />
+    <Compile Include="Data\GeoJson\Triangle.cs" />
     <Compile Include="Data\MeasurementOptions.cs" />
     <Compile Include="Data\DepthInfo.cs" />
     <Compile Include="Data\BaseViewerOptions.cs" />
@@ -171,9 +199,13 @@
     <Compile Include="Interfaces\Data\ViewerType.cs" />
     <Compile Include="Interfaces\GeoJson\IDerivedDataLineString.cs" />
     <Compile Include="Interfaces\GeoJson\IDerivedDataPolygon.cs" />
+    <Compile Include="Interfaces\GeoJson\IDetailsForwardIntersection.cs" />
+    <Compile Include="Interfaces\GeoJson\IStdev.cs" />
+    <Compile Include="Interfaces\GeoJson\IPositionXYZ.cs" />
+    <Compile Include="Interfaces\GeoJson\IPositionStdev.cs" />
     <Compile Include="Interfaces\GeoJson\IPositionXY.cs" />
-    <Compile Include="Interfaces\GeoJson\IArea.cs" />
-    <Compile Include="Interfaces\GeoJson\IValue.cs" />
+    <Compile Include="Interfaces\GeoJson\ITriangle.cs" />
+    <Compile Include="Interfaces\GeoJson\IProperty.cs" />
     <Compile Include="Interfaces\GeoJson\Unit.cs" />
     <Compile Include="Interfaces\GeoJson\IDerivedDataPoint.cs" />
     <Compile Include="Interfaces\GeoJson\IDerivedData.cs" />
