--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x86.csproj
@@ -133,6 +133,34 @@
     <Compile Include="Data\DepthInfo.cs" />
     <Compile Include="Data\BaseViewerOptions.cs" />
     <Compile Include="Data\DomElement\DomElement.cs" />
+    <Compile Include="Data\GeoJson\CRS.cs" />
+    <Compile Include="Data\GeoJson\DerivedData.cs" />
+    <Compile Include="Data\GeoJson\DerivedDataLineString.cs" />
+    <Compile Include="Data\GeoJson\DerivedDataPoint.cs" />
+    <Compile Include="Data\GeoJson\DerivedDataPolygon.cs" />
+    <Compile Include="Data\GeoJson\Details.cs" />
+    <Compile Include="Data\GeoJson\DetailsDepth.cs" />
+    <Compile Include="Data\GeoJson\DetailsForwardIntersection.cs" />
+    <Compile Include="Data\GeoJson\DetailsSmartClick.cs" />
+    <Compile Include="Data\GeoJson\Direction.cs" />
+    <Compile Include="Data\GeoJson\Feature.cs" />
+    <Compile Include="Data\GeoJson\FeatureCollection.cs" />
+    <Compile Include="Data\GeoJson\Geometry.cs" />
+    <Compile Include="Data\GeoJson\LineString.cs" />
+    <Compile Include="Data\GeoJson\MeasureDetails.cs" />
+    <Compile Include="Data\GeoJson\ObservationLines.cs" />
+    <Compile Include="Data\GeoJson\Point.cs" />
+    <Compile Include="Data\GeoJson\Polygon.cs" />
+    <Compile Include="Data\GeoJson\Position.cs" />
+    <Compile Include="Data\GeoJson\PositionStdev.cs" />
+    <Compile Include="Data\GeoJson\PositionXY.cs" />
+    <Compile Include="Data\GeoJson\PositionXYZ.cs" />
+    <Compile Include="Data\GeoJson\Properties.cs" />
+    <Compile Include="Data\GeoJson\Property.cs" />
+    <Compile Include="Data\GeoJson\RecordingInfo.cs" />
+    <Compile Include="Data\GeoJson\ResultDirection.cs" />
+    <Compile Include="Data\GeoJson\Stdev.cs" />
+    <Compile Include="Data\GeoJson\Triangle.cs" />
     <Compile Include="Data\MeasurementOptions.cs" />
     <Compile Include="Data\Overlay.cs" />
     <Compile Include="Data\ObliqueViewerOptions.cs" />
@@ -217,12 +245,24 @@
     <Compile Include="Interfaces\API\IStreetSmartAPI.cs" />
     <Compile Include="Interfaces\Data\MeasurementGeometryType.cs" />
     <Compile Include="Interfaces\Data\ViewerType.cs" />
+    <Compile Include="Interfaces\GeoJson\IDerivedData.cs" />
+    <Compile Include="Interfaces\GeoJson\IDerivedDataLineString.cs" />
+    <Compile Include="Interfaces\GeoJson\IDerivedDataPoint.cs" />
+    <Compile Include="Interfaces\GeoJson\IDerivedDataPolygon.cs" />
+    <Compile Include="Interfaces\GeoJson\IDetailsDepth.cs" />
+    <Compile Include="Interfaces\GeoJson\IDetailsForwardIntersection.cs" />
+    <Compile Include="Interfaces\GeoJson\IDetailsSmartClick.cs" />
+    <Compile Include="Interfaces\GeoJson\IPositionStdev.cs" />
+    <Compile Include="Interfaces\GeoJson\IPositionXY.cs" />
+    <Compile Include="Interfaces\GeoJson\IPositionXYZ.cs" />
+    <Compile Include="Interfaces\GeoJson\IProperty.cs" />
+    <Compile Include="Interfaces\GeoJson\IResultDirection.cs" />
     <Compile Include="Interfaces\GeoJson\IStDev.cs" />
     <Compile Include="Interfaces\GeoJson\IDirection.cs" />
     <Compile Include="Interfaces\GeoJson\IPosition.cs" />
     <Compile Include="Interfaces\GeoJson\IRecordingInfo.cs" />
-    <Compile Include="Interfaces\GeoJson\IDepthDetails.cs" />
     <Compile Include="Interfaces\GeoJson\IDetails.cs" />
+    <Compile Include="Interfaces\GeoJson\ITriangle.cs" />
     <Compile Include="Interfaces\GeoJson\PointProblems.cs" />
     <Compile Include="Interfaces\GeoJson\IMeasureDetails.cs" />
     <Compile Include="Interfaces\GeoJson\MeasureMethod.cs" />
@@ -239,6 +279,7 @@
     <Compile Include="Interfaces\GeoJson\IFeature.cs" />
     <Compile Include="Interfaces\GeoJson\IFeatureCollection.cs" />
     <Compile Include="Interfaces\GeoJson\FeatureType.cs" />
+    <Compile Include="Interfaces\GeoJson\Unit.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
