STREET-1040: - Added a function for get the viewerId: GetViewerId() - Added a function for close a viewer by Id: CloseViewer() - Added a function for get the opened viewers: getViewers()

--- a/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.WinForms/StreetSmart.WinForms.x64.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Data\ViewerOptions.cs" />
     <Compile Include="Data\DomElement\DomElement.cs" />
     <Compile Include="Data\PanoramaViewerOptions.cs" />
+    <Compile Include="Exceptions\StreetSmartCloseViewerException.cs" />
     <Compile Include="Extensions\BoolExtensions.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Factories\OverlayFactory.cs" />
