--- a/DemoAPI/Demo.WinForms/Demo.WinForms.x64.csproj
+++ b/DemoAPI/Demo.WinForms/Demo.WinForms.x64.csproj
@@ -52,9 +52,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="StreetSmart.WinForms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=27f0251e46fddaf9, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>x64\StreetSmart.WinForms.dll</HintPath>
+    <Reference Include="StreetSmart.WinForms.x64">
+      <HintPath>x64\StreetSmart.WinForms.x64.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
