--- a/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x86.csproj
+++ b/StreetSmartAPI/Demo.WinForms/Demo.WinForms.x86.csproj
@@ -38,6 +38,7 @@
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>true</Prefer32Bit>
+    <WarningLevel>1</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>..\..\DemoAPI\Demo.WinForms\Release\x86\</OutputPath>
@@ -113,12 +114,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\StreetSmart.WinForms\StreetSmart.WinForms.x86.csproj">
-      <Project>{11d8ce67-dc5b-4fc9-871b-968b97b5c990}</Project>
-      <Name>StreetSmart.WinForms.x86</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5.2">
       <Visible>False</Visible>
       <ProductName>Microsoft .NET Framework 4.5.2 %28x86 and x64%29</ProductName>
@@ -130,17 +125,15 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StreetSmart.API\WinForms\StreetSmart.WinForms.x86.csproj">
+      <Project>{11d8ce67-dc5b-4fc9-871b-968b97b5c990}</Project>
+      <Name>StreetSmart.WinForms.x86</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x86\*.dll" *
-xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x86\*.bin" *
-xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x86\*.dat" *
-xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x86\*.pak" *
-xcopy /Y "$(SolutionDir)..\DemoAPI\Demo.WinForms\x86\*.exe" *
-mkdir locales
-xcopy /Y  "$(SolutionDir)..\DemoAPI\Demo.WinForms\x86\locales\*.pak" "locales\*"
-mkdir swiftshader
-xcopy /Y  "$(SolutionDir)..\DemoAPI\Demo.WinForms\x86\swiftshader\*.*" swiftshader\*
+    <PostBuildEvent>
 </PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
