--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x64.csproj
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="14.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="..\..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.props" Condition="Exists('..\..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.props')" />
-  <Import Project="..\..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.props" Condition="Exists('..\..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.props')" />
-  <Import Project="..\..\packages\cef.redist.x86.3.3325.1758\build\cef.redist.x86.props" Condition="Exists('..\..\packages\cef.redist.x86.3.3325.1758\build\cef.redist.x86.props')" />
-  <Import Project="..\..\packages\cef.redist.x64.3.3325.1758\build\cef.redist.x64.props" Condition="Exists('..\..\packages\cef.redist.x64.3.3325.1758\build\cef.redist.x64.props')" />
+  <Import Project="..\..\packages\CefSharp.Wpf.67.0.0\build\CefSharp.Wpf.props" Condition="Exists('..\..\packages\CefSharp.Wpf.67.0.0\build\CefSharp.Wpf.props')" />
+  <Import Project="..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.props" Condition="Exists('..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.props')" />
+  <Import Project="..\..\packages\cef.redist.x86.3.3396.1786\build\cef.redist.x86.props" Condition="Exists('..\..\packages\cef.redist.x86.3.3396.1786\build\cef.redist.x86.props')" />
+  <Import Project="..\..\packages\cef.redist.x64.3.3396.1786\build\cef.redist.x64.props" Condition="Exists('..\..\packages\cef.redist.x64.3.3396.1786\build\cef.redist.x64.props')" />
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -38,13 +38,13 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\..\..\DemoAPI\Demo.WinForms\x64\</OutputPath>
+    <OutputPath>..\..\..\DemoAPI\Demo.WPF\x64\</OutputPath>
     <DefineConstants>TRACE;DEBUG;WPF</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x64</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x64\StreetSmart.Wpf.xml</DocumentationFile>
+    <DocumentationFile>..\..\..\DemoAPI\Demo.WPF\x64\StreetSmart.Wpf.xml</DocumentationFile>
     <WarningLevel>3</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
@@ -75,6 +75,48 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\Common\API\Events\ApiEvent.cs">
+      <Link>API\Events\ApiEvent.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\Events\ApiEventList.cs">
+      <Link>API\Events\ApiEventList.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\Events\MeasurementEvent.cs">
+      <Link>API\Events\MeasurementEvent.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\Events\PanoramaRecordingClickViewerEvent.cs">
+      <Link>API\Events\PanoramaRecordingClickViewerEvent.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\Events\PanoramaViewerEvent.cs">
+      <Link>API\Events\PanoramaViewerEvent.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\Events\StreetSmartApiEvent.cs">
+      <Link>API\Events\StreetSmartApiEvent.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\Events\ViewerEvent.cs">
+      <Link>API\Events\ViewerEvent.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\ObliqueViewer.cs">
+      <Link>API\ObliqueViewer.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\ObliqueViewerList.cs">
+      <Link>API\ObliqueViewerList.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\PanoramaViewer.cs">
+      <Link>API\PanoramaViewer.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\PanoramaViewerList.cs">
+      <Link>API\PanoramaViewerList.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\StreetSmartAPI.cs">
+      <Link>API\StreetSmartAPI.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\Viewer.cs">
+      <Link>API\Viewer.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\API\ViewerList.cs">
+      <Link>API\ViewerList.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Data\AddressSettings.cs">
       <Link>Data\AddressSettings.cs</Link>
     </Compile>
@@ -321,6 +363,9 @@
     <Compile Include="..\Common\Factories\PanoramaViewerOptionsFactory.cs">
       <Link>Factories\PanoramaViewerOptionsFactory.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Factories\StreetSmartAPIFactory.cs">
+      <Link>Factories\StreetSmartAPIFactory.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Factories\ViewerOptionsFactory.cs">
       <Link>Factories\ViewerOptionsFactory.cs</Link>
     </Compile>
@@ -329,6 +374,24 @@
     </Compile>
     <Compile Include="..\Common\Handlers\DownloadHandler.cs">
       <Link>Handlers\DownloadHandler.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\IObliqueViewer.cs">
+      <Link>Interfaces\API\IObliqueViewer.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\IPanoramaViewer.cs">
+      <Link>Interfaces\API\IPanoramaViewer.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\IStreetSmartAPI.cs">
+      <Link>Interfaces\API\IStreetSmartAPI.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\IViewer.cs">
+      <Link>Interfaces\API\IViewer.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\ObliqueViewerButtons.cs">
+      <Link>Interfaces\API\ObliqueViewerButtons.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\API\PanoramaViewerButtons.cs">
+      <Link>Interfaces\API\PanoramaViewerButtons.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\IAddressSettings.cs">
       <Link>Interfaces\Data\IAddressSettings.cs</Link>
@@ -504,32 +567,11 @@
     <Compile Include="..\Common\Interfaces\GeoJson\Unit.cs">
       <Link>Interfaces\GeoJson\Unit.cs</Link>
     </Compile>
-    <Compile Include="API\Events\StreetSmartApiEvent.cs" />
-    <Compile Include="API\Events\PanoramaRecordingClickViewerEvent.cs" />
-    <Compile Include="API\Events\ApiEventList.cs" />
-    <Compile Include="API\Events\ApiEvent.cs" />
-    <Compile Include="API\Events\MeasurementEvent.cs" />
-    <Compile Include="API\Events\ViewerEvent.cs" />
-    <Compile Include="API\Events\PanoramaViewerEvent.cs" />
-    <Compile Include="API\ObliqueViewerList.cs" />
-    <Compile Include="API\ObliqueViewer.cs" />
-    <Compile Include="API\Viewer.cs" />
-    <Compile Include="API\ViewerList.cs" />
-    <Compile Include="Interfaces\API\PanoramaViewerButtons.cs" />
-    <Compile Include="Interfaces\API\IObliqueViewer.cs" />
-    <Compile Include="Interfaces\API\IViewer.cs" />
-    <Compile Include="Interfaces\API\ObliqueViewerButtons.cs" />
-    <Compile Include="Factories\StreetSmartAPIFactory.cs" />
-    <Compile Include="API\PanoramaViewer.cs" />
-    <Compile Include="API\PanoramaViewerList.cs" />
-    <Compile Include="Interfaces\API\IPanoramaViewer.cs" />
-    <Compile Include="Interfaces\API\IStreetSmartAPI.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="API\StreetSmartAPI.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StreetSmartGUI.xaml.cs">
       <DependentUpon>StreetSmartGUI.xaml</DependentUpon>
@@ -558,15 +600,15 @@
     <PropertyGroup>
       <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
     </PropertyGroup>
-    <Error Condition="!Exists('..\..\packages\cef.redist.x64.3.3325.1758\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x64.3.3325.1758\build\cef.redist.x64.props'))" />
-    <Error Condition="!Exists('..\..\packages\cef.redist.x86.3.3325.1758\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x86.3.3325.1758\build\cef.redist.x86.props'))" />
-    <Error Condition="!Exists('..\..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.props'))" />
-    <Error Condition="!Exists('..\..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.targets'))" />
-    <Error Condition="!Exists('..\..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.props'))" />
-    <Error Condition="!Exists('..\..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.targets'))" />
+    <Error Condition="!Exists('..\..\packages\cef.redist.x64.3.3396.1786\build\cef.redist.x64.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x64.3.3396.1786\build\cef.redist.x64.props'))" />
+    <Error Condition="!Exists('..\..\packages\cef.redist.x86.3.3396.1786\build\cef.redist.x86.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\cef.redist.x86.3.3396.1786\build\cef.redist.x86.props'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.props'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.targets'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.Wpf.67.0.0\build\CefSharp.Wpf.props')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Wpf.67.0.0\build\CefSharp.Wpf.props'))" />
+    <Error Condition="!Exists('..\..\packages\CefSharp.Wpf.67.0.0\build\CefSharp.Wpf.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\CefSharp.Wpf.67.0.0\build\CefSharp.Wpf.targets'))" />
   </Target>
-  <Import Project="..\..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.targets" Condition="Exists('..\..\packages\CefSharp.Common.65.0.1\build\CefSharp.Common.targets')" />
-  <Import Project="..\..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.targets" Condition="Exists('..\..\packages\CefSharp.Wpf.65.0.1\build\CefSharp.Wpf.targets')" />
+  <Import Project="..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.targets" Condition="Exists('..\..\packages\CefSharp.Common.67.0.0\build\CefSharp.Common.targets')" />
+  <Import Project="..\..\packages\CefSharp.Wpf.67.0.0\build\CefSharp.Wpf.targets" Condition="Exists('..\..\packages\CefSharp.Wpf.67.0.0\build\CefSharp.Wpf.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
