--- a/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x64.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WinForms/StreetSmart.WinForms.x64.csproj
@@ -140,6 +140,9 @@
     <Compile Include="..\Common\Data\DomElement\StyleElementValue.cs">
       <Link>Data\DomElement\StyleElementValue.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Data\ElevationInfo.cs">
+      <Link>Data\ElevationInfo.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Data\GeoJson\CRS.cs">
       <Link>Data\GeoJson\CRS.cs</Link>
     </Compile>
@@ -224,6 +227,9 @@
     <Compile Include="..\Common\Data\GeoJson\Triangle.cs">
       <Link>Data\GeoJson\Triangle.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Data\Json.cs">
+      <Link>Data\Json.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Data\MeasurementOptions.cs">
       <Link>Data\MeasurementOptions.cs</Link>
     </Compile>
@@ -302,6 +308,9 @@
     <Compile Include="..\Common\Data\SLD\VendorOptionType.cs">
       <Link>Data\SLD\VendorOptionType.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Data\TimeTravelInfo.cs">
+      <Link>Data\TimeTravelInfo.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Data\ViewerOptions.cs">
       <Link>Data\ViewerOptions.cs</Link>
     </Compile>
@@ -340,6 +349,9 @@
     </Compile>
     <Compile Include="..\Common\Factories\DomElementFactory.cs">
       <Link>Factories\DomElementFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Factories\JsonFactory.cs">
+      <Link>Factories\JsonFactory.cs</Link>
     </Compile>
     <Compile Include="..\Common\Factories\MeasurementOptionsFactory.cs">
       <Link>Factories\MeasurementOptionsFactory.cs</Link>
@@ -401,6 +413,12 @@
     <Compile Include="..\Common\Interfaces\Data\IDepthInfo.cs">
       <Link>Interfaces\Data\IDepthInfo.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\Data\IElevationInfo.cs">
+      <Link>Interfaces\Data\IElevationInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\Data\IJson.cs">
+      <Link>Interfaces\Data\IJson.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\Data\IMeasurementOptions.cs">
       <Link>Interfaces\Data\IMeasurementOptions.cs</Link>
     </Compile>
@@ -425,6 +443,9 @@
     <Compile Include="..\Common\Interfaces\Data\IRecordingClickInfo.cs">
       <Link>Interfaces\Data\IRecordingClickInfo.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\Data\ITimeTravelInfo.cs">
+      <Link>Interfaces\Data\ITimeTravelInfo.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\Data\IViewerOptions.cs">
       <Link>Interfaces\Data\IViewerOptions.cs</Link>
     </Compile>
@@ -439,6 +460,9 @@
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\TileSchema.cs">
       <Link>Interfaces\Data\TileSchema.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\Data\Unit.cs">
+      <Link>Interfaces\Data\Unit.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\ViewerType.cs">
       <Link>Interfaces\Data\ViewerType.cs</Link>
@@ -560,9 +584,6 @@
     <Compile Include="..\Common\Interfaces\GeoJson\Reliability.cs">
       <Link>Interfaces\GeoJson\Reliability.cs</Link>
     </Compile>
-    <Compile Include="..\Common\Interfaces\GeoJson\Unit.cs">
-      <Link>Interfaces\GeoJson\Unit.cs</Link>
-    </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -586,7 +607,12 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\WPF\StreetSmart.WPF.x64.csproj">
+      <Project>{011EC44B-B881-4523-8E5A-F37D47A9EDD3}</Project>
+      <Name>StreetSmart.WPF.x64</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
