--- a/DemoAPI/Demo.WinForms/Demo.WinForms.x86.csproj
+++ b/DemoAPI/Demo.WinForms/Demo.WinForms.x86.csproj
@@ -54,9 +54,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="StreetSmart.WinForms, Version=1.0.0.0, Culture=neutral, PublicKeyToken=27f0251e46fddaf9, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>x86\StreetSmart.WinForms.dll</HintPath>
+    <Reference Include="StreetSmart.WinForms.x86">
+      <HintPath>x86\StreetSmart.WinForms.x86.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
