--- a/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
+++ b/StreetSmartAPI/StreetSmart.API/WPF/StreetSmart.WPF.x86.csproj
@@ -56,13 +56,14 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x86'">
     <DebugSymbols>true</DebugSymbols>
-    <OutputPath>..\..\..\DemoAPI\Demo.WinForms\x86\</OutputPath>
+    <OutputPath>..\..\..\DemoAPI\Demo.WPF\x86\</OutputPath>
     <DefineConstants>TRACE;DEBUG;WPF</DefineConstants>
     <DebugType>full</DebugType>
     <PlatformTarget>x86</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
-    <DocumentationFile>..\..\..\DemoAPI\Demo.WinForms\x86\StreetSmart.Wpf.xml</DocumentationFile>
+    <DocumentationFile>..\..\..\DemoAPI\Demo.WPF\x86\StreetSmart.Wpf.xml</DocumentationFile>
+    <WarningLevel>0</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x86'">
     <OutputPath>..\..\DemoAPI\Demo.WinForms\x86\</OutputPath>
@@ -191,6 +192,9 @@
     <Compile Include="..\Common\Data\DomElement\StyleElementValue.cs">
       <Link>Data\DomElement\StyleElementValue.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Data\ElevationInfo.cs">
+      <Link>Data\ElevationInfo.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Data\GeoJson\CRS.cs">
       <Link>Data\GeoJson\CRS.cs</Link>
     </Compile>
@@ -275,6 +279,9 @@
     <Compile Include="..\Common\Data\GeoJson\Triangle.cs">
       <Link>Data\GeoJson\Triangle.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Data\Json.cs">
+      <Link>Data\Json.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Data\MeasurementOptions.cs">
       <Link>Data\MeasurementOptions.cs</Link>
     </Compile>
@@ -353,6 +360,9 @@
     <Compile Include="..\Common\Data\SLD\VendorOptionType.cs">
       <Link>Data\SLD\VendorOptionType.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Data\TimeTravelInfo.cs">
+      <Link>Data\TimeTravelInfo.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Data\ViewerOptions.cs">
       <Link>Data\ViewerOptions.cs</Link>
     </Compile>
@@ -391,6 +401,9 @@
     </Compile>
     <Compile Include="..\Common\Factories\DomElementFactory.cs">
       <Link>Factories\DomElementFactory.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Factories\JsonFactory.cs">
+      <Link>Factories\JsonFactory.cs</Link>
     </Compile>
     <Compile Include="..\Common\Factories\MeasurementOptionsFactory.cs">
       <Link>Factories\MeasurementOptionsFactory.cs</Link>
@@ -452,6 +465,12 @@
     <Compile Include="..\Common\Interfaces\Data\IDepthInfo.cs">
       <Link>Interfaces\Data\IDepthInfo.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\Data\IElevationInfo.cs">
+      <Link>Interfaces\Data\IElevationInfo.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\Data\IJson.cs">
+      <Link>Interfaces\Data\IJson.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\Data\IMeasurementOptions.cs">
       <Link>Interfaces\Data\IMeasurementOptions.cs</Link>
     </Compile>
@@ -476,6 +495,9 @@
     <Compile Include="..\Common\Interfaces\Data\IRecordingClickInfo.cs">
       <Link>Interfaces\Data\IRecordingClickInfo.cs</Link>
     </Compile>
+    <Compile Include="..\Common\Interfaces\Data\ITimeTravelInfo.cs">
+      <Link>Interfaces\Data\ITimeTravelInfo.cs</Link>
+    </Compile>
     <Compile Include="..\Common\Interfaces\Data\IViewerOptions.cs">
       <Link>Interfaces\Data\IViewerOptions.cs</Link>
     </Compile>
@@ -490,6 +512,9 @@
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\TileSchema.cs">
       <Link>Interfaces\Data\TileSchema.cs</Link>
+    </Compile>
+    <Compile Include="..\Common\Interfaces\Data\Unit.cs">
+      <Link>Interfaces\Data\Unit.cs</Link>
     </Compile>
     <Compile Include="..\Common\Interfaces\Data\ViewerType.cs">
       <Link>Interfaces\Data\ViewerType.cs</Link>
@@ -610,9 +635,6 @@
     </Compile>
     <Compile Include="..\Common\Interfaces\GeoJson\Reliability.cs">
       <Link>Interfaces\GeoJson\Reliability.cs</Link>
-    </Compile>
-    <Compile Include="..\Common\Interfaces\GeoJson\Unit.cs">
-      <Link>Interfaces\GeoJson\Unit.cs</Link>
     </Compile>
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
